fixes suggested by Findbugs